--- a/RankCheck/app/src/main/res/layout/fragment_home.xml
+++ b/RankCheck/app/src/main/res/layout/fragment_home.xml
@@ -6,10 +6,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".homeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
 
     <TextView
-        android:paddingTop="10dp"
+        android:padding="10dp"
+        android:textSize="75px"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="League of Legends"
@@ -17,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/gameOne"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+
         />
     <LinearLayout
         android:id="@+id/gameOne"
@@ -28,7 +30,33 @@
         app:layout_constraintTop_toBottomOf="@id/gameOneText"
         app:layout_constraintBottom_toTopOf="@id/gameTwoText"
         >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_margin="10dp"
+            android:paddingHorizontal="10dp"
+            android:backgroundTint="#E7E0D3"
+            android:background="@drawable/home_border"
+            android:width="10dp" android:color="#CCCCCC">
 
+            <ImageView
+                android:layout_width="75dp"
+                android:id="@+id/leagueUser"
+                android:layout_height="75dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintEnd_toEndOf="@id/rlFriends"
+                app:layout_constraintBottom_toTopOf="@id/leagueUsername"
+                android:src="@drawable/img_user"
+                />
+            <TextView
+                android:layout_width="75dp"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf= "@id/leagueUser"
+                android:text="League Username"
+                android:textAlignment="center"
+                android:id="@+id/leagueUsername"/>
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/leagueFriendRV"
             android:layout_width="wrap_content"
@@ -47,11 +75,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Apex Legends"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/gameOne"
         app:layout_constraintBottom_toTopOf="@id/gameTwo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingTop="10dp"
+        android:textSize="75px"
+        android:padding="10dp"
         />
     <LinearLayout
         android:id="@+id/gameTwo"
@@ -61,6 +90,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gameTwoText"
         >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_margin="10dp"
+            android:paddingHorizontal="10dp"
+            android:background="@drawable/home_border"
+            android:backgroundTint="#E7E0D3">
+            <ImageView
+                android:layout_width="75dp"
+                android:id="@+id/apexUser"
+                android:layout_height="75dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintEnd_toEndOf="@id/rlFriends"
+                app:layout_constraintBottom_toTopOf="@id/apexUsername"
+                android:src="@drawable/img_user"
+                />
+            <TextView
+                android:layout_width="75dp"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf= "@id/apexUser"
+                android:text="Apex Username"
+                android:textAlignment="center"
+                android:id="@+id/apexUsername"/>
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/apexFriendRV"
             android:layout_width="wrap_content"
@@ -78,28 +132,55 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rocket League"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/gameTwo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingTop="10dp"
+        android:textSize="75px"
+        android:padding="10dp"
         />
     <LinearLayout
-        android:id="@+id/row3"
+        android:id="@+id/rlRow"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gameThreeText"
         >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/home_border"
+            android:backgroundTint="#E7E0D3"
+            >
+        <ImageView
+            android:layout_width="75dp"
+            android:id="@+id/rlUser"
+            android:layout_height="75dp"
+            android:layout_gravity="center_vertical"
+            app:layout_constraintEnd_toEndOf="@id/rlFriends"
+            app:layout_constraintBottom_toTopOf="@id/rlUsername"
+            android:src="@drawable/img_user"
+            />
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf= "@id/rlUser"
+            android:text="Rocket League Username"
+            android:textAlignment="center"
+            android:id="@+id/rlUsername"/>
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/row4"
+            android:id="@+id/rlFriends"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/row3"
+            app:layout_constraintTop_toBottomOf="@id/rlRow"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
     </LinearLayout>
