basic home page functionality

--- a/RankCheck/app/src/main/res/layout/fragment_home.xml
+++ b/RankCheck/app/src/main/res/layout/fragment_home.xml
@@ -49,13 +49,21 @@
                 app:layout_constraintBottom_toTopOf="@id/leagueUsername"
                 android:src="@drawable/img_user"
                 />
+
             <TextView
+                android:id="@+id/leagueUsername"
                 android:layout_width="75dp"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toBottomOf= "@id/leagueUser"
-                android:text="League Username"
+                android:layout_height="wrap_content"
+                android:text="Your Rank:"
                 android:textAlignment="center"
-                android:id="@+id/leagueUsername"/>
+                app:layout_constraintTop_toBottomOf="@id/leagueUser" />
+
+            <TextView
+                android:id="@+id/leagueRankTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="*RANK*"
+                android:textAlignment="center"/>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/leagueFriendRV"
@@ -98,6 +106,7 @@
             android:paddingHorizontal="10dp"
             android:background="@drawable/home_border"
             android:backgroundTint="#E7E0D3">
+
             <ImageView
                 android:layout_width="75dp"
                 android:id="@+id/apexUser"
@@ -109,11 +118,18 @@
                 />
             <TextView
                 android:layout_width="75dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf= "@id/apexUser"
-                android:text="Apex Username"
+                android:text="Your Rank:"
                 android:textAlignment="center"
                 android:id="@+id/apexUsername"/>
+
+            <TextView
+                android:id="@+id/apexRankTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="*RANK*"
+                android:textAlignment="center" />
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/apexFriendRV"
@@ -155,7 +171,8 @@
             android:background="@drawable/home_border"
             android:backgroundTint="#E7E0D3"
             >
-        <ImageView
+
+            <ImageView
             android:layout_width="75dp"
             android:id="@+id/rlUser"
             android:layout_height="75dp"
@@ -166,11 +183,18 @@
             />
         <TextView
             android:layout_width="75dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf= "@id/rlUser"
-            android:text="Rocket League Username"
+            android:text="Your Rank:"
             android:textAlignment="center"
             android:id="@+id/rlUsername"/>
+
+            <TextView
+                android:id="@+id/rocketRankTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="*RANK*"
+                android:textAlignment="center" />
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rocketFriendRV"
