--- a/RankCheck/app/src/main/res/layout/activity_friends_detail.xml
+++ b/RankCheck/app/src/main/res/layout/activity_friends_detail.xml
@@ -20,10 +20,11 @@
 
         <ImageView
             android:id="@+id/imageUser"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="20dp"
-            android:src="@drawable/ic_launcher_background" />
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_user"
+            android:paddingLeft="5dp"/>
 
         <LinearLayout
             android:id="@+id/nameBio"
@@ -129,61 +130,67 @@
 
     <Button
         android:id="@+id/addbutton"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginEnd="28dp"
         android:layout_weight="1"
-        android:background="@drawable/baseline_add_24"
+        android:text="Add"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/rowUser"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39"
-        android:visibility="visible"/>
+        app:layout_constraintVertical_bias="0.39" />
 
     <Button
-        android:id="@+id/removebutton"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:id="@+id/cancelrequest"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        android:background="@drawable/baseline_remove_24"
+        android:text="Cancel Request"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:visibility="gone"
         />
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="34dp"
-        android:layout_height="21dp"
+    <Button
+        android:id="@+id/removebutton"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="4dp"
-        android:text="add"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/rowUser"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/addbutton"
-        app:layout_constraintVertical_bias="0.0"
-        android:visibility="visible"/>
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="53dp"
-        android:layout_height="21dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="remove"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/rowUser"
+        android:layout_weight="1"
+        android:text="Remove"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/removebutton"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        />
+
+    <Button
+        android:id="@+id/acceptbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="124dp"
+        android:layout_weight="1"
+        android:text="Accept"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/declinebutton"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="1"
+        android:text="Decline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
