--- a/RankCheck/app/src/main/res/layout/user_details.xml
+++ b/RankCheck/app/src/main/res/layout/user_details.xml
@@ -21,10 +21,10 @@
 
         <ImageView
             android:id="@+id/imageUserdetail"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="20dp"
-            android:src="@drawable/ic_launcher_background" />
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_user" />
 
         <LinearLayout
             android:id="@+id/nameBiodetail"
