--- a/RankCheck/app/src/main/res/layout/friends_rank_card_cell.xml
+++ b/RankCheck/app/src/main/res/layout/friends_rank_card_cell.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:layout_marginTop="15dp"
@@ -24,31 +24,36 @@
         <!--Text View over Card View-->
         <ImageView
             android:id="@+id/profilePic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             app:srcCompat="@drawable/img_user" />
-
-        <TextView
-            android:id="@+id/friendName"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="20dp"
-            android:text="Friend Username"
-            android:textColor="@color/black"
-            android:textSize="50px" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+                <TextView
+                    android:id="@+id/friendName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="Friend Username"
+                    android:textColor="@color/black"
+                    android:textSize="50px" />
 
-        <TextView
-            android:id="@+id/friendRankTV"
+                <TextView
+                    android:id="@+id/friendRankTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Rank"
+                    android:textColor="@color/black"
+                    android:textSize="50px" />
+        </LinearLayout>
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:text="Rank"
-            android:textColor="@color/black"
-            android:textSize="50px" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
