--- a/RankCheck/app/src/main/res/layout/friends_rank_card_cell.xml
+++ b/RankCheck/app/src/main/res/layout/friends_rank_card_cell.xml
@@ -22,10 +22,11 @@
 
         <!--Text View over Card View-->
         <ImageView
-            android:id="@+id/profilePic"
-            android:layout_width="40dp"
-            android:layout_height="80dp"
+            android:id="@+id/rankPic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            app:layout_constraintEnd_toStartOf="@id/friendName"
             app:srcCompat="@drawable/img_user" />
 
         <LinearLayout
@@ -38,9 +39,9 @@
                 android:id="@+id/friendName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="40dp"
                 android:layout_marginTop="4dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:text="Friend Username"
                 android:textColor="@color/black"
                 android:textSize="50px" />
@@ -49,8 +50,8 @@
                 android:id="@+id/friendRankTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="1dp"
                 android:text="Rank"
                 android:textColor="@color/black"
                 android:textSize="50px" />
