--- a/RankCheck/app/src/main/res/layout/friends_card_cell.xml
+++ b/RankCheck/app/src/main/res/layout/friends_card_cell.xml
@@ -11,7 +11,7 @@
 <!--Card View widget-->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:contentPadding="15dp"
         app:cardCornerRadius="8dp"
