--- a/RankCheck/app/src/main/res/layout/fragment_profile.xml
+++ b/RankCheck/app/src/main/res/layout/fragment_profile.xml
@@ -84,7 +84,9 @@
                 android:layout_weight="1"
                 android:text="Submit"
                 android:visibility="gone" />
+
         </LinearLayout>
+
     </LinearLayout>
 
     <TextView
@@ -156,6 +158,18 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:layout_weight="1"
+        android:text="Log Out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rowGamesRV" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
