smol fixes to rank images and logout button

--- a/RankCheck/app/src/main/res/layout/fragment_profile.xml
+++ b/RankCheck/app/src/main/res/layout/fragment_profile.xml
@@ -103,7 +103,7 @@
     <LinearLayout
         android:id="@+id/rowFriendsRV"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="125dp"
         app:layout_constraintBottom_toTopOf="@id/GamesText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -163,9 +163,11 @@
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="75dp"
         android:layout_weight="1"
         android:text="Log Out"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
