--- a/RankCheck/app/src/main/res/layout/friends_card_cell.xml
+++ b/RankCheck/app/src/main/res/layout/friends_card_cell.xml
@@ -12,14 +12,13 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:contentPadding="15dp"
+        android:layout_height="90dp"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        app:cardBackgroundColor="#E7E0D3"
         app:cardCornerRadius="8dp"
         app:cardElevation="20dp"
-        app:cardBackgroundColor="#E7E0D3"
-        android:clickable="true"
-        android:layout_margin="10dp"
-        >
+        app:contentPadding="15dp">
 
         <!--Text View over Card View-->
         <ImageView
@@ -29,17 +28,17 @@
             android:layout_height="100dp"
             android:layout_gravity="center_vertical"
             app:srcCompat="@drawable/img_user" />
+
         <TextView
             android:id="@+id/friendName"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="4dp"
-            android:textSize="50px"
-            android:text="Friend Username"
-            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:text="Friend Username"
+            android:textColor="@color/black"
+            android:textSize="50px" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
